# trading-sdk

./: .cursorrules  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PAPER-TRADING.md  README.md  SECURITY.md  deny.toml  flatten-history.sh  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
.claude/: settings.json
.claude/hooks/: pre-pr-create.sh  pre-tool-use.sh  session-start.sh
.claude/skills/run-trading-sdk/: EVIDENCE-2026-07-21.md  SKILL.md  driver.mjs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  new-decision-row.py  open-pr.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: test-ci-gate.sh  verify-ci-gate.sh
.github/workflows/: ci.yml  security.yml
conformance/: README.md  codec.ndjson  errors.ndjson  nonce.ndjson  signing.ndjson
crates/proof-trading-sdk/: Cargo.toml
crates/proof-trading-sdk-derive/: Cargo.toml
crates/proof-trading-sdk-derive/src/: lib.rs
crates/proof-trading-sdk-pyo3/: Cargo.toml
crates/proof-trading-sdk-pyo3/src/: lib.rs  pkcs11.rs
crates/proof-trading-sdk-wasm/: Cargo.toml
crates/proof-trading-sdk-wasm/src/: lib.rs
crates/proof-trading-sdk/src/: abci_event.rs  codec.rs  crypto.rs  governance.rs  lib.rs  signer.rs  state.rs  types.rs  wire.rs
crates/spec/: Cargo.toml
crates/spec/golden-vectors/: cancel_order.hex  oracle_update.hex  place_order.hex
crates/spec/src/: lib.rs
crates/spec/tests/: runner.rs
docs/adr/: 0001-wasm-core-vs-parallel-types.md  0002-oracle-health-out-of-scope.md
examples/: connect-and-trade.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_payload.rs  decode_tx.rs
python/: README.md  pyproject.toml
python/src/proof_trading_sdk/: __init__.py  _native.pyi  actions.py  client.py  config.py  errors.py  nonce.py  streams.py
python/tests/: test_bridge.py  test_codec_conformance.py  test_conformance_vectors.py  test_gateway_routing.py  test_governance_hash.py  test_key_handle.py
scripts/: browser-smoke.mjs  prepare-browser-smoke.mjs
src/: client.builders.test.ts  client.chain.test.ts  client.governance.test.ts  client.reads.test.ts  client.submit.test.ts  client.test.ts  client.ts  client.ws.test.ts  codec-adapter.test.ts  codec-adapter.ts  codec.test.ts  codec.ts  conformance.test.ts  crypto.ts  e2e.test.ts  errors.test.ts  errors.ts  governance-hash.test.ts  index.exports.test.ts  index.ts  test-setup.ts  tx-result.test.ts  tx-result.ts  types.ts  wasm-codec.test.ts  wasm-loader.test.ts  wasm-loader.ts
src/scenarios/: README.md  S01-simple-match.test.ts  S02-partial-fill-cancel.test.ts  S03-multi-partial-fills.test.ts  S04-cancel-then-replace.test.ts  S05-market-order-sweep.test.ts  S10-liquidation.test.ts  S20-cascade-200-accounts.test.ts  S21-jelly-replay.test.ts  S22-covid-replay.test.ts  S23-pool-isolation.test.ts  S24-hlp-floor.test.ts  SDK01-simple-match.test.ts  SDK02-partial-fill-cancel.test.ts  SDK03-multi-partial-fills.test.ts  SDK04-cancel-then-replace.test.ts  SDK05-market-order-sweep.test.ts  SDK10-liquidation.test.ts  SDK20-cascade-200-accounts.test.ts  SDK21-jelly-replay.test.ts  SDK22-covid-replay.test.ts  SDK23-pool-isolation.test.ts  SDK24-hlp-floor.test.ts  harness.ts  invariants.ts
