[package]
name = "proof-trading-sdk-derive"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Proc-macros for proof-trading-sdk (AbciEvent derive). Extracted from exchange-derive."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
