[package]
name = "proof-trading-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust core for the Proof trading SDK: MessagePack codec, Ed25519 signing, and wire types. Hub of the wheel-and-spokes SDK."
repository = "https://github.com/Proof-labs/trading-sdk"

[dependencies]
serde = { version = "1", features = ["derive"] }
derive_more = { version = "1", features = ["from", "display"] }
serde_bytes = "0.11"
rmp-serde = "1"
# The codec/types were extracted from exchange-core; the proc-macro keeps its
# original `exchange_derive` import path via the `package` rename.
exchange-derive = { package = "proof-trading-sdk-derive", path = "../proof-trading-sdk-derive" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha3 = "0.10"

[dev-dependencies]
sha2 = "0.10"
hex = "0.4"
serde_json = "1"

# Inherited from exchange-core: the wire layer holds these guarantees regardless
# of where it is compiled. Enforced under `cargo clippy`.
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
float_arithmetic = "deny"
arithmetic_side_effects = "deny"
disallowed_types = "deny"
